Clean up easy deprecation warnings
Replace deprecated commons-lang3 StringUtils/RandomStringUtils/LevenshteinDistance calls,
Charsets, Gson JsonParser, new URL(String), DefaultCredentialsProvider.create(),
@ApiModelProperty(readOnly) and @Schema(required) with their recommended replacements.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>